# ms-program-control

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
msprogramcontrol/: __main__.py  jsonrpc.py  terminal_gui.py
src/msprogramcontrol/: __main__.py  future.py  jsonrpc.py  terminal_gui.py
src/msprogramcontrol/interface/: __init__.py  battery.py  hub_status.py  program_control.py  slot_chooser.py  terminal.py
src/msprogramcontrol/widgets/: __init__.py  battery.py  hub_status.py  menu.py  program_buttons.py  slot_chooser.py  terminal.py
