[project]
name = "msprogramcontrol"
version = "1.1.0"
description = "GUI interface for control and upload programs to the Lego Robot Inventor (51515) hub and the SPIKE Prime (45678) hub."
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Tibor David" },
]

# Exemple de dépendances
dependencies = [
    "pyserial",
]

[tool.setuptools.package-data]
"msprogramcontrol.assets" = ["*.png"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
